--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
         "express-static-gzip": "^2.0.7",
         "fakelish": "^0.3.0",
         "mongodb": "^3.6.3",
+        "node-fetch": "^2.6.1",
         "pngjs": "^6.0.0",
         "serialazy": "^3.0.0",
         "spacetime": "^6.6.2",
@@ -36,6 +37,7 @@
         "@types/cookie-parser": "^1.4.2",
         "@types/cors": "^2.8.7",
         "@types/express": "^4.17.7",
+        "@types/node-fetch": "^2.5.8",
         "typescript": "^3.9.7"
     }
 }
