--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,6 +30,20 @@
                 "BUILD_TYPE": "DEV-AGAINST-PROD"
             },
             "outFiles": ["${workspaceFolder}/server/.build/*.js"]
+        },
+
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Debug notification sender",
+            "skipFiles": ["<node_internals>/**"],
+            "program": "${workspaceFolder}/server/.build/sendNotifications.js",
+            "preLaunchTask": "tsc: build - server/tsconfig.json",
+            "envFile": "${workspaceFolder}/../EpycDebug.sh",
+            "env": {
+                "BUILD_TYPE": "DEV"
+            },
+            "outFiles": ["${workspaceFolder}/server/.build/*.js"]
         }
     ]
 }
