--- a/api/api.yaml
+++ b/api/api.yaml
@@ -219,6 +219,8 @@ components:
           type: array
           items:
             $ref: '#/definitions/Frame'
+        titleImage:
+          $ref: '#/definitions/FrameImageData'
       required:
         - name
         - frames
