--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,6 @@
     "license": "MIT",
     "dependencies": {
         "@types/mongodb": "^3.6.3",
-        "@types/pngjs": "^6.0.0",
         "@types/tmp": "^0.2.0",
         "@types/uuid": "^8.3.0",
         "@types/ws": "^7.4.0",
@@ -24,9 +23,9 @@
         "express": "^4.17.1",
         "express-static-gzip": "^2.0.7",
         "fakelish": "^0.3.0",
+        "jimp": "^0.16.1",
         "mongodb": "^3.6.3",
         "node-fetch": "^2.6.1",
-        "pngjs": "^6.0.0",
         "serialazy": "^3.0.0",
         "spacetime": "^6.6.2",
         "tmp-promise": "^3.0.2",
