--- a/client/package.json
+++ b/client/package.json
@@ -6,49 +6,48 @@
     "author": "",
     "license": "MIT",
     "devDependencies": {
-        "@types/react": "^16.9.17",
-        "@types/react-dom": "^16.9.4",
-        "@types/react-router": "^5.1.3",
+        "@types/react": "^17.0.3",
+        "@types/react-dom": "^17.0.2",
+        "@types/react-router": "^5.1.12",
         "@types/react-router-bootstrap": "^0.24.5",
-        "@types/react-router-dom": "^5.1.3",
-        "webpack-bundle-analyzer": "^3.8.0",
-        "webpack-dev-server": "^3.10.1",
-        "webpack-merge": "^5.1.2"
+        "@types/react-router-dom": "^5.1.7",
+        "@types/resize-observer-browser": "^0.1.5",
+        "webpack-bundle-analyzer": "^4.4.0",
+        "webpack-dev-server": "^3.11.2",
+        "webpack-merge": "^5.7.3"
     },
     "dependencies": {
-        "@types/react-infinite-scroller": "^1.2.1",
-        "autoprefixer": "^9.8.6",
-        "bootstrap": "^4.4.1",
-        "copy-webpack-plugin": "^6.0.3",
-        "css-loader": "^4.2.1",
-        "file-loader": "^6.0.0",
-        "html-webpack-plugin": "^4.3.0",
-        "idb-keyval": "^5.0.2",
-        "mobx": "^6.0.4",
-        "mobx-react-lite": "^3.1.6",
-        "node-sass": "^4.13.0",
-        "postcss-loader": "^4.0.4",
-        "react": "^16.12.0",
-        "react-bootstrap": "^1.0.0-beta.16",
-        "react-colorful": "^4.4.4",
-        "react-dom": "^16.12.0",
+        "autoprefixer": "^10.2.5",
+        "bootstrap": "^4.6.0",
+        "copy-webpack-plugin": "^8.0.0",
+        "css-loader": "^5.1.1",
+        "file-loader": "^6.2.0",
+        "html-webpack-plugin": "^5.3.0",
+        "idb-keyval": "^5.0.4",
+        "mobx": "^6.1.8",
+        "mobx-react-lite": "^3.2.0",
+        "node-sass": "^5.0.0",
+        "postcss-loader": "^5.1.0",
+        "react": "^17.0.1",
+        "react-bootstrap": "^1.5.1",
+        "react-colorful": "^5.0.0",
+        "react-dom": "^17.0.1",
         "react-infinite-scroller": "^1.2.4",
         "react-router": "^5.1.2",
         "react-router-bootstrap": "^0.25.0",
         "react-router-dom": "^5.1.2",
-        "sass-loader": "^9.0.3",
-        "spacetime": "^6.10.1",
-        "style-loader": "^1.1.1",
-        "ts-loader": "^8.0.2",
-        "typescript": "^3.7.4",
-        "webpack": "^4.41.4",
-        "webpack-cli": "^3.3.10"
+        "sass-loader": "^11.0.1",
+        "style-loader": "^2.0.0",
+        "ts-loader": "^8.0.17",
+        "typescript": "^4.2.3",
+        "webpack": "^5.24.4",
+        "webpack-cli": "^4.5.0"
     },
     "scripts": {
         "build": "npm run clean && npm run compile && npm run compress",
         "compile": "webpack --config ./webpack.config.prod.js --output-path ../server/.build/public",
         "compress": "gzip -k ../server/.build/public/*",
-        "dev": "webpack-dev-server --open --config ./webpack.config.dev.js",
+        "dev": "webpack serve --open --config ./webpack.config.dev.js",
         "clean": "rm -rf ../server/.build/public",
         "analyze": "npm run analyze-clean && npm run analyze-compile && npm run analyze-view",
         "analyze-clean": "rm -rf .build && mkdir .build",
