--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -3,9 +3,9 @@
         "outDir": "../.build-client",
         "noImplicitAny": true,
         "module": "commonjs",
-        "target": "es6",
+        "target": "ES2017",
         "jsx": "react",
-        "lib": ["es6", "dom"],
+        "lib": ["ES2017", "dom"],
         "sourceMap": true,
         "experimentalDecorators": true,
         "strict": true,
