--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,10 @@
     "author": "",
     "license": "MIT",
     "dependencies": {
+        "@slack/events-api": "^3.0.0",
+        "@slack/oauth": "^2.0.1",
+        "@slack/socket-mode": "^1.0.2",
+        "@slack/web-api": "^6.1.0",
         "@types/mongodb": "^3.6.3",
         "@types/tmp": "^0.2.0",
         "@types/uuid": "^8.3.0",
@@ -36,6 +40,7 @@
         "@types/cookie-parser": "^1.4.2",
         "@types/cors": "^2.8.7",
         "@types/express": "^4.17.7",
+        "@types/node": "^12.7.0",
         "@types/node-fetch": "^2.5.8",
         "typescript": "^3.9.7"
     }
