--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,7 @@ jobs:
         run: |
           cd server
           npm install
+          npm test
           npm run build
 
       - name: Build Client
