--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -23,6 +23,7 @@ jobs:
         run: |
           cd server
           npm install
+          npm test
           npm run build
 
       - name: Build Client
