--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "build": "npm run clean && tsc",
         "clean": "rm -rf ./.build",
-        "start": "node ./.build/server.js"
+        "start": "node ./.build/server.js",
+        "test": "jest"
     },
     "author": "",
     "license": "MIT",
@@ -40,8 +41,11 @@
         "@types/cookie-parser": "^1.4.2",
         "@types/cors": "^2.8.7",
         "@types/express": "^4.17.7",
+        "@types/jest": "^26.0.22",
         "@types/node": "^12.7.0",
         "@types/node-fetch": "^2.5.8",
+        "jest": "^26.6.3",
+        "ts-jest": "^26.5.4",
         "typescript": "^3.9.7"
     }
 }
