--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,6 @@
         "idb-keyval": "^5.0.4",
         "mobx": "^6.1.8",
         "mobx-react-lite": "^3.2.0",
-        "node-sass": "^5.0.0",
         "postcss-loader": "^5.1.0",
         "react": "^17.0.1",
         "react-bootstrap": "^1.5.1",
@@ -36,6 +35,7 @@
         "react-router": "^5.1.2",
         "react-router-bootstrap": "^0.25.0",
         "react-router-dom": "^5.1.2",
+        "sass": "^1.32.13",
         "sass-loader": "^11.0.1",
         "style-loader": "^2.0.0",
         "ts-loader": "^8.0.17",
