--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "name": "Debug Server",
             "skipFiles": ["<node_internals>/**"],
             "program": "${workspaceFolder}/server/.build/server.js",
-            "preLaunchTask": "tsc: build - server/tsconfig.json",
+            "preLaunchTask": "tsc: build - server/tsconfig-debug.json",
             "envFile": "${workspaceFolder}/EpycDebug.sh",
             "env": {
                 "BUILD_TYPE": "DEV"
