--- a/server/package.json
+++ b/server/package.json
@@ -13,36 +13,35 @@
     "license": "MIT",
     "dependencies": {
         "@slack/events-api": "^3.0.1",
-        "@slack/oauth": "^2.2.0",
-        "@slack/socket-mode": "^1.1.0",
-        "@slack/web-api": "^6.3.0",
-        "@types/tmp": "^0.2.1",
-        "@types/uuid": "^8.3.1",
-        "@types/ws": "^7.4.7",
-        "aws-sdk": "^2.963.0",
-        "cookie-parser": "^1.4.5",
+        "@slack/oauth": "^2.4.0",
+        "@slack/socket-mode": "^1.2.0",
+        "@slack/web-api": "^6.6.0",
+        "@types/tmp": "^0.2.3",
+        "@types/uuid": "^8.3.4",
+        "@types/ws": "^8.2.3",
+        "aws-sdk": "^2.1077.0",
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
-        "discord.js": "^13.0.1",
-        "express": "^4.17.1",
-        "express-static-gzip": "^2.1.1",
+        "dayjs": "^1.10.7",
+        "discord.js": "^13.6.0",
+        "express": "^4.17.3",
+        "express-static-gzip": "^2.1.5",
         "fakelish": "^0.3.0",
         "jimp": "^0.16.1",
-        "mongodb": "^4.1.0",
-        "node-fetch": "^2.6.1",
+        "mongodb": "^4.4.0",
         "serialazy": "^3.0.0",
-        "spacetime": "^6.16.3",
-        "tmp-promise": "^3.0.2",
+        "tmp-promise": "^3.0.3",
+        "undici": "^4.14.1",
         "uuid": "^8.3.2"
     },
     "devDependencies": {
         "@types/cookie-parser": "^1.4.2",
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
-        "@types/jest": "^26.0.24",
-        "@types/node": "^16.4.13",
-        "@types/node-fetch": "^2.5.12",
-        "jest": "^27.0.6",
-        "ts-jest": "^27.0.4",
-        "typescript": "^4.3.5"
+        "@types/jest": "^27.4.0",
+        "@types/node": "^17.0.19",
+        "jest": "^27.5.1",
+        "ts-jest": "^27.1.3",
+        "typescript": "^4.5.5"
     }
 }
