--- a/package.json
+++ b/package.json
@@ -4,7 +4,22 @@
     "description": "Eat Poop You Cat",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "generate-client-api": "export JAVA_HOME=~/Downloads/jdk-13.0.1.jdk/Contents/Home && openapi-generator-cli generate -i ./api/api.yaml -g typescript-fetch --additional-properties=typescriptThreePlus=true -o ./client/api",
+        "generate-server-api": "export JAVA_HOME=~/Downloads/jdk-13.0.1.jdk/Contents/Home && openapi-generator-cli generate -i ./api/api.yaml -g typescript-fetch -t ./api/openapi-typescript-server -o ./server/api",
+        "generate-api": "npm run generate-client-api && npm run generate-server-api",
+        "server-build": "npm run server-clean && tsc --project ./server/tsconfig.json",
+        "server-clean": "rm -rf ./.build",
+        "server-start": "node ./.build/server.js",
+        "test": "cd server && jest",
+        "client-build": "npm run client-clean && npm run client-compile && npm run client-compress",
+        "client-compile": "webpack --config ./client/webpack.config.prod.js --output-path ./.build/public",
+        "client-compress": "gzip -k ./.build/public/*",
+        "client-dev": "webpack serve --open --config ./client/webpack.config.dev.js",
+        "client-clean": "rm -rf ./.build/public",
+        "client-analyze": "npm run client-analyze-clean && npm run client-analyze-compile && npm run client-analyze-view",
+        "client-analyze-clean": "rm -rf ./.build && mkdir ./.build",
+        "client-analyze-compile": "webpack --config ./client/webpack.config.prod.js --profile --json > ./.build/webpack-profile.json",
+        "client-analyze-view": "webpack-bundle-analyzer ./.build/webpack-profile.json"
     },
     "author": "",
     "license": "MIT",
@@ -13,6 +28,66 @@
     },
     "homepage": "https://github.com/matthewjamesadam/epyc#readme",
     "dependencies": {
-        "prettier": "^2.2.1"
+        "@slack/events-api": "^3.0.1",
+        "@slack/oauth": "^2.4.0",
+        "@slack/socket-mode": "^1.2.0",
+        "@slack/web-api": "^6.6.0",
+        "aws-sdk": "^2.1077.0",
+        "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
+        "dayjs": "^1.10.7",
+        "discord.js": "^13.6.0",
+        "express": "^4.17.3",
+        "express-static-gzip": "^2.1.5",
+        "fakelish": "^0.3.0",
+        "jimp": "^0.16.1",
+        "mongodb": "^4.4.0",
+        "serialazy": "^3.0.0",
+        "tmp-promise": "^3.0.3",
+        "undici": "^4.14.1",
+        "uuid": "^8.3.2"
+    },
+    "devDependencies": {
+        "@openapitools/openapi-generator-cli": "^2.4.26",
+        "@types/cookie-parser": "^1.4.2",
+        "@types/cors": "^2.8.12",
+        "@types/express": "^4.17.13",
+        "@types/jest": "^27.4.0",
+        "@types/node": "^17.0.19",
+        "@types/react": "^17.0.39",
+        "@types/react-dom": "^17.0.13",
+        "@types/resize-observer-browser": "^0.1.7",
+        "@types/tmp": "^0.2.3",
+        "@types/uuid": "^8.3.4",
+        "@types/ws": "^8.2.3",
+        "autoprefixer": "^10.4.2",
+        "bootstrap": "^5.1.3",
+        "copy-webpack-plugin": "^10.2.4",
+        "css-loader": "^6.7.0",
+        "file-loader": "^6.2.0",
+        "html-webpack-plugin": "^5.5.0",
+        "idb-keyval": "^6.1.0",
+        "jest": "^27.5.1",
+        "mobx": "^6.4.2",
+        "mobx-react-lite": "^3.3.0",
+        "postcss-loader": "^6.2.1",
+        "prettier": "^2.2.1",
+        "react": "^17.0.2",
+        "react-bootstrap": "^2.2.0",
+        "react-colorful": "^5.5.1",
+        "react-dom": "^17.0.2",
+        "react-router": "^6.2.2",
+        "react-router-dom": "^6.2.2",
+        "sass": "^1.49.9",
+        "sass-loader": "^12.6.0",
+        "style-loader": "^3.3.1",
+        "ts-jest": "^27.1.3",
+        "ts-loader": "^9.2.7",
+        "typescript": "^4.6.2",
+        "webpack": "^5.70.0",
+        "webpack-bundle-analyzer": "^4.5.0",
+        "webpack-cli": "^4.9.2",
+        "webpack-dev-server": "^4.7.4",
+        "webpack-merge": "^5.8.0"
     }
 }
