--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -18,17 +18,17 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
 
+      - name: Install Dependencies
+        shell: bash
+        run: npm install
+
       - name: Build Server
         shell: bash
         run: |
-          cd server
-          npm install
           npm test
-          npm run build
+          npm run server-build
 
       - name: Build Client
         shell: bash
         run: |
-          cd client
-          npm install
-          npm run build
+          npm run client-build
